test/corpus/atom.txt
==============
Atom - Unquoted
==============

:abcd
:_ab_cd_
:ISO8601
:a@localhost
:a@localhost?
:a@localhost!

---

(source_file
  (expression (atom))
  (expression (atom))
  (expression (atom))
  (expression (atom))
  (expression (atom))
  (expression (atom)))

==============
Atom - Operator
==============

:++
:--
:::
:\\

---

(source_file
  (expression (atom))
  (expression (atom))
  (expression (atom))
  (expression (atom)))

==============
Atom - Quoted
==============

:'hello'
:"Hello"

---

(source_file (expression (atom)) (expression (atom)))
